--- a/package.json
+++ b/package.json
@@ -20,25 +20,21 @@
     "use:taobao": "nrm use taobao",
     "update": "ncu -u --reject sass-loader,sass&&cnpm i",
     "update:globle": "ncu -g --concurrency 10 --timeout 80000",
-    "push": "start ./push.sh",
-    "deploy": "start ./deploy.sh",
     "commit": "git add . && cz-customizable",
-    "release": "standard-version --preset gitmoji-config"
+    "release": "standard-version --preset gitmoji-config",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chuzhixin/vue-admin-beautiful-template.git"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "src/**/*.{js,vue}": [
       "eslint --fix",
       "git add"
-    ]
+    ],
+    "*.js": "eslint --cache --fix",
+    "*.css": "stylelint --fix"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -78,6 +74,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.14.0",
     "filemanager-webpack-plugin": "^6.1.4",
+    "husky": "^8.0.3",
     "image-webpack-loader": "^7.0.1",
     "lint-staged": "^11.1.1",
     "plop": "^2.7.4",
